# iot-soil

./: .gitignore  CMakeLists.txt  iotcore.cachain.crt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
